// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render Title with color 1`] = `
<div>
  <h3
    class="StyledBaseText-dVBfTO dizdMO"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with default properties 1`] = `
<div>
  <h3
    class="StyledBaseText-dVBfTO dajMpX"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with mixed color 1`] = `
<div>
  <h3
    class="StyledBaseText-dVBfTO dajMpX"
    data-blade-component="title"
  >
    Supercharge your business with the all‑powerful
     
    <span
      class="StyledBaseText-dVBfTO jJlHWY"
      data-blade-component="title"
    >
      Payment Gateway
    </span>
  </h3>
</div>
`;

exports[`<Title /> should render Title with variant "large" 1`] = `
<div>
  <h1
    class="StyledBaseText-dVBfTO dcWlx"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h1>
</div>
`;

exports[`<Title /> should render Title with variant "medium" 1`] = `
<div>
  <h2
    class="StyledBaseText-dVBfTO epiXPW"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h2>
</div>
`;

exports[`<Title /> should render Title with variant "small" 1`] = `
<div>
  <h3
    class="StyledBaseText-dVBfTO dajMpX"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with variant "small" and contrast "high" 1`] = `
<div>
  <h3
    class="StyledBaseText-dVBfTO ixRRZX"
    data-blade-component="title"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;
